2002-05-19  Kevin Vandersloot <kfv101@psu.edu>

	* configure.in: bump libwnck requirement and version number
	
	* Release 1.1.7

2002-05-19  Shooby Ban <shooby@gnome.hu>

	* configure.in: Added "hu", Hungarian to ALL_LINGUAS.

2002-05-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added "mk" Macedonian to ALL_LINGUAS.
	
2002-05-15  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Vietnamese (vi), Azeri (az) and Dutch (nl)
	to ALL_LINGUAS
	* src/proctable.c,src.interface.c: Added no-c-format tags to make
	xgettext happy

2002-05-14  Anders Carlsson  <andersca@gnu.org>

	* configure.in:
	Require libwnck 0.11
	
2002-05-02 John Fleck <jfleck@inkstain.net>

	* help/C/Makefile.am
	* help/C/gnome-system-monitor-C.omf
	enabling docs name change to gnome-system-monitor

2002-05-02  Abel Cheung  <maddog@linux.org.hk>

	* .cvsignore, help/.cvsignore, help/C/.cvsignore,
	omf-install/.cvsignore, src/.cvsignore: Ignore more files.

	* src/callbacks.c: Add translator credits.

2002-04-30 John Fleck <jfleck@inkstain.net>

	* help/C/procman-C.omf
	update OMF file to match new dtd for SK > 0.3.8

2002-04-03  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>

	* configure.in (ALL_LINGUAS): Added pt_BR.

2002-03-31 John Fleck <jfleck@inkstain.net>

	* help/C/procman-C.omf
	fixing omf file, per bug #77052
	thanks to martin H. for catching this

2002-03-23  Kevin Vandersloot <kfv101@psu.edu>

	* Release 1.1.6

2002-03-04  Wang Jian  <lark@linux.net.cn>

	* configure.in: Added "zh_CN" to ALL_LINGUAS.

2002-02-24  Kevin Vandersloot <kfv101@psu.edu>
	
	* configure.in, gnome-system-monitor.spec: release 1.1.5

2002-02-11  Kevin Vandersloot <kfv101@psu.edu>

	* configure.in: add ja to ALL_LINGUAS

2002-02-11  Christophe Merlet  <redfox@eikonex.org>

	* configure.in: Added fr to ALL_LINGUAS.

2002-02-10  Kevin Vandersloot <kfv101@psu.edu>

	* configure.in: bump version, disst smldocs.make

	* Makefile.am: add omf-instal so it gets disted

	* release 1.1.4
