@@ -52,6 +52,5 @@ src/Makefile
 po/Makefile.in
 help/Makefile
 help/C/Makefile
-omf-install/Makefile
 ])
 
