@@ -1,15 +1,4 @@
-figs = figures/addColumn.png \
-	figures/memoryMaps.png \
-	figures/sortMenu2.png  \
-	figures/changePriority.png \
-	figures/moreInfo.png \
-	figures/sortMenu.png \
-	figures/colorPanel.png \
-	figures/processListing.png \
-	figures/systemMonitor.png  \
-	figures/columnContextMenu.png  \
-	figures/sortButton.png \
-	figures/viewMenu.png
+figdir = figures
 docname = gnome-system-monitor
 lang = C
 omffile = gnome-system-monitor-C.omf
