@@ -1,22 +1,25 @@
-<?xml version="1.0"?>
+<?xml version="1.0" standalone="no"?>
 <omf>
        <resource>
-<creator>Bill Day billday@bellatlantic.net</creator>
+       <creator>
+         billday@bellatlantic.net (Bill Day)
+	</creator>
        <title>
      GNOME System Monitor
     </title>
      <date>May 2, 2002</date>
+     <version identifier="2.0" date="2002-05-27" description="Updated to full OMF format"/>
      <subject category="GNOME|Utilities"/>
      <description>
       This document describes use of the GNOME System Manager. 
     </description>
      <type>
-     manual
+     user's guide
     </type>
-     <format mime="text/xml" dtd=""/>
+     <format mime="text/xml" dtd="-//OASIS//DTD DocBook XML V4.1.2//EN"/>
      <identifier url="gnome-system-monitor.xml"/>
      <language code="C"/>
      <relation seriesid="0beef4ba-5ca4-11d6-9d4d-e07a2388f7ea"/>
-     <rights type="" license.version="" holder=""/>
+     <rights type="GNU FDL" license.version="1.1" holder="Bill Day"/>
      </resource>
      </omf>
