@@ -1,3 +1,12 @@
+2002-05-27  Chris Lyttle  <chris@wilddev.net>
+
+	* omf.make: Added for new scrollkeeper
+	* xmldocs.make: Changed for new scrollkeeper
+	* Makefile.am: added omf.make to EXTRA_DIST remove omf-install dir
+	* configure.in: remove omf-install dir
+	* help/C/Makefile.am: change figs to figdir
+	* help/C/gnome-system-monitor-C.omf: Updated to new OMF format
+
 2002-05-19  Kevin Vandersloot <kfv101@psu.edu>
 
 	* configure.in: bump libwnck requirement and version number
